# fate

./: README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/fate/: color.py  git_utils.py  main.py  prek.py  run.py
tests/: conftest.py  test_color.py  test_git_utils.py  test_main.py  test_prek.py  test_run.py
