[project]
name = "fate-casino"
version = "0.1.0"
description = "✨💖 Don't think, just pull! 🎰🪙"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/vEnhance/fate-casino" }

dependencies = []

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
