[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fate-casino"
version = "0.1.0"
description = "✨💖 Don't think, just pull! 🎰🪙"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/vEnhance/fate-casino" }

dependencies = [
    "gitpython>=3.1.46",
    "tomli>=2.4.0",
    "tomlkit>=0.14.0",
]

[project.scripts]
fate = "fate.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fate"]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
